# CoFie

./: .gitignore  CMakeLists.txt  README.md  data2  download_data.py  evaluate.py  get_all_cat_split.ipynb  get_chamfer_mean.ipynb  index.html  plot_log.py  preprocess_data.py  process_data copy.py  process_data.py  process_data_normal.py  reconstruct.py  reconstruct.sh  reconstruct2.sh  reconstruct_batch.py  run.txt  save_results.ipynb  save_results_shapenet.ipynb  select_mesh.ipynb  test_split.ipynb  testdata.ipynb  train.py  train.sh  train_deep_ls.py  vis_coord.ipynb
deep_ls/: __init__.py  data.py  data_voxel.py  data_voxel_global.py  mesh.py
examples/all/: specs.json
examples/planes/: specs.json
examples/splits/: 10cat_test.json  55cat_test.json  55cat_test_small.json  55cat_train.json  nglod_test.json  shapenet_selected.json  shapenet_selected2.json  sv2_all_test.json  sv2_all_test_small.json  sv2_all_test_small2.json  sv2_all_train.json  sv2_all_train_small.json  sv2_planes_train.json  thingi.json  thingi2.json
networks/: deep_ls_decoder.py
src/: ShaderProgram.cpp  Utils.h
utils/: geo_utils.py  loss_utils.py  recon_utils.py  train_script.py  train_utils.py  vis_utils.py
